# reshith

./: .gitignore  AGENTS.md  INDENT.md  Makefile  README.md  run.sh
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: c00dfca323c2_initial_schema.py
backend/reshith/: __init__.py  main.py
backend/reshith/api/: __init__.py  resolvers.py  schema.py  types.py
backend/reshith/core/: config.py
backend/reshith/db/: __init__.py  models.py  seed.py  session.py
backend/reshith/exercises/: __init__.py  advanced.py  article.py  prepositions.py  qal_paradigm.py  sentences.py  translation.py  verb_paradigm.py  verbal.py  vocabulary.py
backend/reshith/exercises/greek/: conjugation.py  declension.py  vocabulary.py
backend/reshith/exercises/latin/: conjugation.py  declension.py  vocabulary.py
backend/reshith/languages/: __init__.py  aramaic.py  base.py  buddhist_hybrid_sanskrit.py  greek.py  hebrew.py  latin.py  midrashic_hebrew.py  old_english.py  pali.py  registry.py  sanskrit.py
backend/reshith/services/: auth.py  brenton.py  drc.py  gnt.py  jps.py  kjv.py  llm.py  lxx.py  reference.py  srs.py  tahot.py  tbesh.py  tts.py  vulgate.py
backend/scripts/rashi_pipeline/: __init__.py  abbreviations.py  custom_lexicon.py  dicta_client.py  language_id.py  models.py  morph_parser.py  progress.py  run.py  sefaria_lexicon.py  tokenizer.py
backend/tests/: __init__.py  test_advanced.py  test_article.py  test_hebrew.py  test_prepositions.py  test_sentences.py  test_srs.py  test_translation.py  test_verbal.py  test_vocabulary.py
docs/: railway-deployment.md  sources.md  (+1 more)
(+1228 files in other folders)
