[project]
name = "reshith"
version = "0.1.0"
description = "Language learning application for classical languages"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "strawberry-graphql[fastapi]>=0.252.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "openai>=1.57.0",
    "google-cloud-texttospeech>=2.16.0",
    "transformers>=4.33.0",
    "torch>=2.0.0",
    "scipy>=1.10.0",
    "parler-tts>=0.2.0",
    "soundfile>=0.12.0",
    "greenlet>=3.3.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[tool.uv]
# tokenizers 0.20.x has broken pyproject.toml (missing project.version).
# Override to transformers 4.48+ which uses tokenizers>=0.21 (fixed).
# parler-tts pins transformers==4.46.1 but typically works with newer versions.
override-dependencies = [
    "transformers>=4.48.0",
    "tokenizers>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["strawberry.ext.mypy_plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
